--- a/index.html
+++ b/index.html
@@ -4,27 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="stylesheet" href="estilo/midia-Query.css">
 </head>
 <body>
-    <main>
-        <section id="login">
-            <div id="imagem">
-             <!--Aqui vai a imagem nas CSS-->   
-            </div>
+        <main>
+            <section id="login">
+                <div id="imagem">
+                <!--Aqui vai a imagem nas CSS-->   
+                </div>
 
             <div id="formulario">
                 <h1>Login</h1>
-                <p>Seja bem-vindo(a) novamente.Faça login para acessar sua conta e fazer as configurações no seu anbiente.</p>
-                <form action="login.php" method="post">
-
-                </form>
-
+                <p>Seja bem-vindo(a) novamente.Faça login para acessar sua conta e fazer
+                as configurações no seu anbiente.</p>
+            <form action="login.php" method="post">
+                <div class="campo">
+                        
+                    <i class="material-icons">person</i>
+                    <input type="email" name="login" id="ilogin" placeholder="seu e-mail" 
+                    autocomplete="email" required maxlength="30">
+                <label for="ilogin">login:</label>
             </div>
 
-        </section>
-    </main>
+            <div class="campo">
+                    <i class="material-icons">vpn_key</i>
+                    <input type="password" name="senha" id="isenha" placeholder="sua senha" 
+                    autocomplete="current-password" required minlength="8" maxlength="20">
+                    <label for="isenha">senha:</label>
+            </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html" class="botao">
+                    esqueci a senha <i class="material-icons">mail</i>
+                    </a>
+                </form>
+
+                </div>       
+
+            </section>
+        </main>
     
 </body>
 </html>
